objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Commit_Closed_New_Sales_Forecast_Cat__c</fullName>
        <formula>CASE(ForecastCategoryName, 
&quot;Commit&quot;, Total_Incremental_Personal_Currency__c, 
&quot;Closed&quot;, Total_Incremental_Personal_Currency__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit &amp; Closed New Sales (Forecast Cat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Closed_Renewals_90_95_100__c</fullName>
        <formula>CASE(StageName, 
&quot;90%&quot;, Total_Renewal_Personal_Currency__c, 
&quot;95%&quot;, Total_Renewal_Personal_Currency__c, 
&quot;100%&quot;, Total_Renewal_Personal_Currency__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit &amp; Closed Renewals (90%,95%,100%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_Closed_Renewals_Forecast_Cat__c</fullName>
        <formula>CASE(ForecastCategoryName, 
&quot;Commit&quot;, Total_Renewal_Personal_Currency__c, 
&quot;Closed&quot;, Total_Renewal_Personal_Currency__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit &amp; Closed Renewals (Forecast Cat)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Was_There_a_Competitor__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1099 Pro</fullName>
                </value>
                <value>
                    <fullName>5280 Magazine</fullName>
                </value>
                <value>
                    <fullName>AAC</fullName>
                </value>
                <value>
                    <fullName>ABA-ALI Continuing Professional Education</fullName>
                </value>
                <value>
                    <fullName>Abacus Law</fullName>
                </value>
                <value>
                    <fullName>Absolute Tax</fullName>
                </value>
                <value>
                    <fullName>Abstract Master</fullName>
                </value>
                <value>
                    <fullName>AccessData</fullName>
                </value>
                <value>
                    <fullName>Accountedge</fullName>
                </value>
                <value>
                    <fullName>Actionstep</fullName>
                </value>
                <value>
                    <fullName>Aderant</fullName>
                </value>
                <value>
                    <fullName>Aderant - Total Office</fullName>
                </value>
                <value>
                    <fullName>Advantage Law</fullName>
                </value>
                <value>
                    <fullName>Affinity</fullName>
                </value>
                <value>
                    <fullName>Allegro</fullName>
                </value>
                <value>
                    <fullName>AlphaTax</fullName>
                </value>
                <value>
                    <fullName>AlternaDev</fullName>
                </value>
                <value>
                    <fullName>Altman Weil</fullName>
                </value>
                <value>
                    <fullName>American Lawyer Media (ALM)</fullName>
                </value>
                <value>
                    <fullName>AMFS</fullName>
                </value>
                <value>
                    <fullName>Amicus Attorney</fullName>
                </value>
                <value>
                    <fullName>AmLaw Economic Survey</fullName>
                </value>
                <value>
                    <fullName>ASI</fullName>
                </value>
                <value>
                    <fullName>Atlantax Systems, Inc</fullName>
                </value>
                <value>
                    <fullName>ATO</fullName>
                </value>
                <value>
                    <fullName>Attorney at Law Magazine</fullName>
                </value>
                <value>
                    <fullName>Attorneys Online</fullName>
                </value>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>Avature</fullName>
                </value>
                <value>
                    <fullName>Avvo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Notes__c</fullName>
        <label>Competitor Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Price__c</fullName>
        <label>Competitor Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract_Cleared_Status__c</fullName>
        <label>Contract Cleared Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Closed_Date__c</fullName>
        <description>Created for Elite business as part of DPS-15733</description>
        <inlineHelpText>This is the date that the contract was signed and submitted by the rep</inlineHelpText>
        <label>Contract Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <label>Contract Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Year</fullName>
                </value>
                <value>
                    <fullName>3 Year</fullName>
                </value>
                <value>
                    <fullName>4 Year</fullName>
                </value>
                <value>
                    <fullName>5 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Created as part of DLT-15672 - Automation Changes for New Mid Contract Flag</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Mid Contract</fullName>
                </value>
                <value>
                    <fullName>Old Mid Contract</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counter_Opportunity_Active_5_90__c</fullName>
        <formula>IF(or(ISPICKVAL(StageName,&quot;5%&quot;),ISPICKVAL(StageName,&quot;10%&quot;),ISPICKVAL(StageName,&quot;25%&quot;),ISPICKVAL(StageName,&quot;50%&quot;),ISPICKVAL(StageName,&quot;75%&quot;),ISPICKVAL(StageName,&quot;90%&quot;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter - Opportunity Active 5-90</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_Opportunity_Closed__c</fullName>
        <formula>IF( 
or( 
ISPICKVAL(StageName,&quot;95%&quot;),ISPICKVAL(StageName,&quot;100%&quot;) 
) 
, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter - Opportunity Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_Opportunity_Converted__c</fullName>
        <formula>IF(or(
RecordType.Name = &quot;Pipeline Opportunity&quot;,ISPICKVAL(StageName,&quot;5%&quot;),ISPICKVAL(StageName,&quot;10%&quot;),ISPICKVAL(StageName,&quot;25%&quot;),ISPICKVAL(StageName,&quot;50%&quot;),ISPICKVAL(StageName,&quot;75%&quot;),ISPICKVAL(StageName,&quot;90%&quot;),ISPICKVAL(StageName,&quot;95%&quot;),ISPICKVAL(StageName,&quot;100%&quot;))
, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter - Opportunity Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_Opportunity_Loaded__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter - Opportunity Loaded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_Opportunity_Worked__c</fullName>
        <formula>IF( And(ISPICKVAL(StageName, &quot;1%&quot;), or(ISPICKVAL(Status__c, &quot;Unworked&quot;), isblank(text(Status__c)))), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter - Opportunity Worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Account.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>Product_Participation__r.Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Owner__c</fullName>
        <formula>Product_Participation__r.CreatedBy.FirstName + &quot; &quot; + Product_Participation__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Email_Template__c</fullName>
        <formula>IF (isDigitalSpearHead__c, HYPERLINK(&quot;/apex/Digital_Create_Email_Template?id=&quot;&amp;Id, IMAGE(&quot;/resource/Digital_Button_Create_Email_Template&quot;, &quot;Expire&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Email Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <description>Custom field created for reporting.</description>
        <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Month__c</fullName>
        <formula>text(year(Created_Date__c))+ 
IF(len(text(month(Created_Date__c)))=1, &apos;0&apos;+text(month(Created_Date__c)), text(month(Created_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date (YYYYMM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <description>It should pull value from created by user’s role</description>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created by:Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Category__c</fullName>
        <formula>Account.Credit_Risk_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Risk Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <description>Customer Group from the Account object.</description>
        <formula>TEXT( Account.Customer_Group__c )</formula>
        <label>Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Check__c</fullName>
        <formula>Account.Customer_Master_Check__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Master Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Renewal_Preference__c</fullName>
        <formula>TEXT(Account.Customer_Renewal_Preference__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Renewal Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRS_Status_Digital__c</fullName>
        <description>This Field has to be updated automatically based on whether Customer  has accepted or declined the digital offer for an Digital Opportunity(i.e. Is Digital Channel = TRUE). By default it should be Blank.

DLT-8115: Rename &quot;DRS Status&quot; Field &amp; logic for setting values.</description>
        <label>Digital Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital / Ready for Channel</fullName>
                </value>
                <value>
                    <fullName>Declined Digital / Ready for Channel</fullName>
                </value>
                <value>
                    <fullName>Non-Digital / Ready for Channel</fullName>
                </value>
                <value>
                    <fullName>Digital Only</fullName>
                </value>
                <value>
                    <fullName>Ready for DRS</fullName>
                </value>
                <value>
                    <fullName>Ready for DRS-Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dar_DRR_Other__c</fullName>
        <formula>IF ((BEGINS(UPPER(Name), &apos;DAR&apos;)),&apos;DAR&apos;, IF(( BEGINS(UPPER(Name), &apos;DRR&apos;)),&apos;DRR&apos;,IF(( BEGINS((Name), &apos;Auto&apos;)),&apos;Auto&apos;,
IF (( CONTAINS((Name), &apos;Assisted&apos;)),&apos;Other&apos;,&apos;Pure Digital&apos;))))</formula>
        <label>Auto/DAR/DRR/Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contracted Renewal</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Flow Through</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digi_Offer__c</fullName>
        <label>Digital Offer Preview</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Firm__c</fullName>
        <label>Digital Firm</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_MidContract_Status__c</fullName>
        <label>Digital MidContract Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Mid_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indictaion for mid contract upsells</description>
        <label>Mid Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Offer_Tracking_Codes__c</fullName>
        <description>Used to hold the digital firm specific tracking codes for the offer link.  The &apos;Preview&apos; offer link will not include the tracking codes, but the customer offer link will.</description>
        <label>Digital Offer Tracking Codes</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Offer__c</fullName>
        <description>This is the customer offer link.  The preview offer link is formulated through a process builder flow.  Once the offer has been reviewed, then the tracking codes are added to the preview offer.</description>
        <formula>IF( Digital_Review_Complete__c == true, Digi_Offer__c + Digital_Offer_Tracking_Codes__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Opportunity_Failure_Reason__c</fullName>
        <description>Captures Exception Messages from Informatica</description>
        <label>Digital Opportunity Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital_PerviousStageName__c</fullName>
        <description>DLT-10048  Update opportunity stage back to Original values for DSR  used Opportunity.</description>
        <inlineHelpText>Help pervious stage name for Digital Automation</inlineHelpText>
        <label>Digital PerviousStageName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_PreviousStageName__c</fullName>
        <description>DLT-10048  Update opportunity stage back to Original values for DSR  used Opportunity.</description>
        <inlineHelpText>Help Previous stage name for Digital Automation</inlineHelpText>
        <label>Digital Previous StageName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Promo_Code__c</fullName>
        <label>Digital Promo Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, business has completed review of the offer and can now be presented to the customer.</description>
        <label>Digital Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <formula>Key_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discard_Reason__c</fullName>
        <label>Discard Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Answering Machine/Fax</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Cancel Renewal</fullName>
                </value>
                <value>
                    <fullName>Debt</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Insufficient Info</fullName>
                </value>
                <value>
                    <fullName>Invalid PPO</fullName>
                </value>
                <value>
                    <fullName>Mass Discard</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Not Answering</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Secretary</fullName>
                </value>
                <value>
                    <fullName>Vendor Solicitation</fullName>
                </value>
                <value>
                    <fullName>Wrong Segment</fullName>
                </value>
                <value>
                    <fullName>Wrong Telephone</fullName>
                </value>
                <value>
                    <fullName>Wrong Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>Pulls District from User record for use in reports.</description>
        <formula>Owner.District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Auto_Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box (when checked) will allow reps to prevent an opportunity from being automatically reassigned.</description>
        <label>Do Not Auto Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Net_Value__c</fullName>
        <description>EDW	  NET_VALUE	Document Net Value	Currency</description>
        <label>Document Net Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Document_creation_Date__c</fullName>
        <description>EDW	CREATEDON	Document creation Date	Date</description>
        <label>Document creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERP_System__c</fullName>
        <description>Created as part of DPS-6351 for Lotus Release</description>
        <label>ERP System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3D Cart</fullName>
                </value>
                <value>
                    <fullName>Acumatica</fullName>
                </value>
                <value>
                    <fullName>Amaricommerce</fullName>
                </value>
                <value>
                    <fullName>Amazon UK</fullName>
                </value>
                <value>
                    <fullName>Aptos (POS)</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                    <isActive>false</isActive>
                    <label>Ariba</label>
                </value>
                <value>
                    <fullName>BigCommerce</fullName>
                </value>
                <value>
                    <fullName>Civica/Authority</fullName>
                </value>
                <value>
                    <fullName>CM2</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                    <isActive>false</isActive>
                    <label>Concur</label>
                </value>
                <value>
                    <fullName>Concur Invoice</fullName>
                </value>
                <value>
                    <fullName>Content Extract (POS)</fullName>
                </value>
                <value>
                    <fullName>Core Commerce</fullName>
                </value>
                <value>
                    <fullName>Coupa</fullName>
                </value>
                <value>
                    <fullName>Data File Integrator (DFI)</fullName>
                </value>
                <value>
                    <fullName>Distribution One by ERP One</fullName>
                </value>
                <value>
                    <fullName>DMSi</fullName>
                </value>
                <value>
                    <fullName>DST (AS400)</fullName>
                </value>
                <value>
                    <fullName>Dynamics AX</fullName>
                    <isActive>false</isActive>
                    <label>Dynamics AX</label>
                </value>
                <value>
                    <fullName>EFI CBS</fullName>
                </value>
                <value>
                    <fullName>EFI Monarch</fullName>
                </value>
                <value>
                    <fullName>EFI Pace</fullName>
                </value>
                <value>
                    <fullName>EFI Printsmithvision</fullName>
                </value>
                <value>
                    <fullName>EFI Radius</fullName>
                </value>
                <value>
                    <fullName>EFI Technique</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                    <isActive>false</isActive>
                    <label>Epicor</label>
                </value>
                <value>
                    <fullName>Epicor CMS</fullName>
                </value>
                <value>
                    <fullName>Epicor ERP (V10)</fullName>
                </value>
                <value>
                    <fullName>Epicor iScala</fullName>
                </value>
                <value>
                    <fullName>Epicor P21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eloqua_source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eloqua source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_to_Corporate__c</fullName>
        <formula>Case(  CurrencyIsoCode,
&quot;HKD&quot;, 7.8500,
&quot;GBP&quot;, 0.6178,
&quot;USD&quot;, 1.000,
&quot;NZD&quot;, 1.2142,
&quot;AUD&quot;, 0.9868,
&quot;CNY&quot;, 6.3600,
&quot;EUR&quot;, 0.7720,
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate to Corporate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_End_Date__c</fullName>
        <label>Expected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue_Date__c</fullName>
        <label>Expected Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Start_Date__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expire_All_Proposals__c</fullName>
        <formula>IF (isDigitalSpearHead__c, HYPERLINK(&quot;/apex/Digital_Expire_All_Proposals?id=&quot;&amp;Id, IMAGE(&quot;/resource/Digital_Button_Expire_All_Proposals&quot;, &quot;Expire&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expire All Proposals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Account.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Sales_Territory_Number__c</fullName>
        <formula>Account.Field_Sales_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Sales Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FindLaw_AM_Territory_Number__c</fullName>
        <formula>Account.FindLaw_AM_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FindLaw AM Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FindLaw_CDA_Territory_Number__c</fullName>
        <formula>Account.FindLaw_CDA_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FindLaw CDA Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FindLaw_Inside_Sales_Territory_Num__c</fullName>
        <formula>Account.FindLaw_Inside_Sales_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FindLaw Inside Sales Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FindLaw_Sales_Territory_Number__c</fullName>
        <formula>Account.FindLaw_Sales_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FindLaw Sales Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLI_Rep_Type_1__c</fullName>
        <description>Created as part of CRM -17878</description>
        <label>Rep Type 1</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLI_Rep_Type_2__c</fullName>
        <description>Created as part of CRM -17878</description>
        <label>Rep Type 2</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GLI_Total_New__c</fullName>
        <description>Created as part of crm- 15093</description>
        <label>Total New</label>
        <summarizedField>OpportunityLineItem.LCRM_New_ACV_SalesPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Action__c</field>
            <operation>equals</operation>
            <value>Add, Change</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GLI_Total_Renewal__c</fullName>
        <description>Created as part of CRM- 15093</description>
        <label>Total Renewal</label>
        <summarizedField>OpportunityLineItem.LCRM_New_ACV_SalesPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Action__c</field>
            <operation>equals</operation>
            <value>Renew</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GPO_ID__c</fullName>
        <label>GPO ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Days__c</fullName>
        <label>Grace Period Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Expiration_Date__c</fullName>
        <formula>IF(Grace_Period_Indicator__c,
Expected_Revenue_Date__c + Grace_Period_Days__c,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grace Period Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sourced from EDW via Informatica</description>
        <label>Grace Period Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_LatAm_Stabilization_Primary__c</fullName>
        <description>Count</description>
        <label>Has LatAm Stabilization Primary</label>
        <summaryFilterItems>
            <field>Quote.Primary_Quote__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote.RecordTypeId</field>
            <operation>equals</operation>
            <value>LATAM New Quote,LATAM Renewal Quote</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>